Fixes bug for sixth's ship wrong dimensions, gave perviously fixed bugs for AI code, started on dark mode implementation

--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 /* Navigation styles */
 
 .logo {
@@ -28,6 +27,20 @@ a {
   display:block;
   line-height: 40px;
   text-decoration: none;
+  background-color: white;
   color: black;
 
 }
+
+/*beginning of custom addition Dark/Light mode
+body {
+  padding: 25px;
+  background-color: white;
+  color: black;
+  font-size: 25px;
+}
+
+.dark-mode {
+  background-color: black;
+  color: white;
+}*/
